--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -5115,9 +5115,19 @@
    "source": [
     "### Predictions"
    ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "hotel",
+   "language": "python",
+   "name": "python3"
   },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "ccafc2b4",
-   "metadata
+  "language_info": {
+   "name": "python",
+   "version": "3.12.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
